portal-dev/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-dev-backend
  name: portal-dev-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-dev-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: portal-dev-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: "eee101.tokyotech.org"
      containers:
        - env:
            - name: DB_DATABASE
              value: service_portal_dev
            - name: DB_HOST
              value: tailscale.kmbk.tokyotech.org
            - name: DB_PORT
              value: "33060"
            - name: DB_USER
              value: service_portal_dev
            - name: WITHOUT_MAIL
              value: "true"
            - name: WITHOUT_TRAQ
              value: "true"
          image: ghcr.io/traptitech/portal:staging@sha256:491d27e17d014cbd807505d8198d322ce656ded307f145e6e6a6667c7022aeb8
          name: portal-dev
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          volumeMounts:
            - mountPath: /app/ec_pub.pem
              name: ec-pub
              readOnly: true
              subPath: ec_pub.pem
            - mountPath: /app/ec.pem
              name: ec-private
              readOnly: true
              subPath: ec.pem
      restartPolicy: Always
      volumes:
        - name: ec-pub
          secret:
            secretName: portal-dev-ec-pub
        - name: ec-private
          secret:
            secretName: portal-dev-ec
