portal-dev/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: portal-dev-backend
  name: portal-dev-backend
spec:
  ports:
    - name: "8101"
      port: 8101
      targetPort: 3000
  selector:
    io.kompose.service: portal-dev-backend
