portal-dev/backend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-dev-backend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portal-dev-tls
  routes:
    - kind: Rule
      match: Host(`portal-dev.trapti.tech`) && PathPrefix(`/api/`)
      priority: 20
      services:
        - namespace: portal-dev
          kind: Service
          name: portal-dev-backend
          port: 8101
          scheme: http
          strategy: RoundRobin
          weight: 1

    - kind: Rule
      match: Host(`portal-dev.trapti.tech`) && Path(`/activate`)
      priority: 30
      services:
        - namespace: portal-dev
          kind: Service
          name: portal-dev-backend
          port: 8101
          scheme: http
          strategy: RoundRobin
          weight: 1
